# rust-actix-demo

./: Cargo.toml  Dockerfile  Makefile  README.md  configuration.yml  spec.yaml  temp.txt
configuration/: base.yaml
migrations/: 20221004061946_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
